apps/sharkey/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sharkey
  labels:
    name: sharkey
