apps/sharkey/app/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sharkey
  namespace: sharkey
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sharkey
  template:
    metadata:
      labels:
        app: sharkey
    spec:
      containers:
      - image: ghcr.io/transfem-org/sharkey:stable
        name: sharkey
        volumeMounts:
        - name: sharkey-files
          mountPath: "/sharkey/files"
        - name: sharkey-config
          mountPath: "/sharkey/.config"
          readOnly: true
      - name: redis
        image: redis
        ports:
          - containerPort: 6379
            name: redis
            protocol: TCP    
      volumes:
      - name: config-secret
        secret:
          secretName: sharkey-config-secret
          optional: false
      - name: config
        configMap:
          name: sharkey-config
          items:
          - key: "default.yml"
            path: "default.yml"
      - name: sharkey-files
        persistentVolumeClaim:
          claimName: sharkey-files-pvc
      - name: sharkey-config
        persistentVolumeClaim:
          claimName: sharkey-config-pvc
