apps/sharkey/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sharkey
  namespace: sharkey
spec:
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: http
  selector:
    app: sharkey
  type: ClusterIP
