apps/sharkey/app/route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: web
  namespace: sharkey
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`social.funkyfish.cool`)
    kind: Rule
    middlewares:
      - name: strict-security-headers
        namespace: default
      - name: ratelimit
    services:
    - name: sharkey
      port: http
